micromobility_car_navigation/local/Project/dev_ws/log/build_2021-05-23_12-17-02/navigation/stdout_stderr.log
running egg_info
writing ../../build/navigation/navigation.egg-info/PKG-INFO
writing dependency_links to ../../build/navigation/navigation.egg-info/dependency_links.txt
writing entry points to ../../build/navigation/navigation.egg-info/entry_points.txt
writing requirements to ../../build/navigation/navigation.egg-info/requires.txt
writing top-level names to ../../build/navigation/navigation.egg-info/top_level.txt
reading manifest file '../../build/navigation/navigation.egg-info/SOURCES.txt'
writing manifest file '../../build/navigation/navigation.egg-info/SOURCES.txt'
running build
running build_py
copying navigation/navigation_handler.py -> /home/user/Projects/dev_ws/build/navigation/build/lib/navigation
running install
running install_lib
copying /home/user/Projects/dev_ws/build/navigation/build/lib/navigation/navigation_handler.py -> /home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation
byte-compiling /home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/navigation_handler.py to navigation_handler.cpython-38.pyc
  File "/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/navigation_handler.py", line 76
    if msg.data = True:
                ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/navigation/navigation.egg-info to /home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation-0.0.0-py3.8.egg-info
running install_scripts
Installing gps_publisher script to /home/user/Projects/dev_ws/install/navigation/lib/navigation
Installing heading_calculator script to /home/user/Projects/dev_ws/install/navigation/lib/navigation
Installing navigation_handler script to /home/user/Projects/dev_ws/install/navigation/lib/navigation
Installing proximity_calculator script to /home/user/Projects/dev_ws/install/navigation/lib/navigation
Installing test_node script to /home/user/Projects/dev_ws/install/navigation/lib/navigation
writing list of installed files to '/home/user/Projects/dev_ws/build/navigation/install.log'
